Fix layout on small screens

--- a/assets/main.css
+++ b/assets/main.css
@@ -7,10 +7,15 @@
     --accent-color2: #a02020;
     --link-hover-color: #b0b0b0;
     --code-color: #e08080;
-    --font-size: 12px;
 
     color: var(--fg-color);
     font-family: "Hack";
+}
+
+@media (width < 800px) {
+    :root {
+        font-size: 12px;
+    }
 }
 
 p:first-child, h1:first-child, h2:first-child, h3:first-child {
@@ -28,16 +33,13 @@ a:hover {
 
 body {
     background-color: var(--bg-color1);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     margin: 0;
 }
 
 .page {
-    flex-grow: 1;
     max-width: 70rem;
-    margin: 1rem;
+    margin: 0 auto;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -56,6 +58,7 @@ nav {
     gap: 2rem;
     justify-content: space-between;
     align-items: center;
+    overflow: auto;
 }
 
 .nav-links a {
